[ add ] footer-color

--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -3,3 +3,4 @@ $green-piece:green;
 $brand-color:gray;
 $header-background:rgb(255, 105, 0);
 $container-width:1200px;
+$footer-color:rgb(26, 26, 26);
